--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snow Dashboard</title>
     <script type="module" crossorigin src="./index.js"></script>
+    <script src="coi-serviceworker.js"></script>
     <link rel="stylesheet" crossorigin href="./index.css">
   </head>
   <body>
